# ColorPic

./: CHANGELOG.md  MANIFEST.in  README.md  index.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md
src/: __init__.py  color_picker.py  config.py  ui.py  utils.py
tests/: __init__.py  test_utils.py
